--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 group = net.silthus
-pluginName = PluginName
+pluginName = sChat
 author = Silthus
 mcVersion = 1.17.1
-apiVersion = 1.17
-version = 4.3.0
+apiVersion = 1.13
+version = 1.0.0
