add loading from default config.yml

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,1 +1,8 @@
-# add your default configuration properties here
+channels:
+  global:
+    name: Global
+    format:
+      prefix: '&6[&aG&6]&r'
+      # alternate formatting
+      # prefix: <gold>[<green>G<gold>]<reset>
+      chat_color: GREEN
