--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ spigot {
     apiVersion = project.property("apiVersion")
     load = STARTUP
     //    depends = ['']
-    //    softDepends = [''
+    softDepends = ['ProtocolLib']
 }
 
 compileJava {
@@ -50,12 +50,10 @@ archivesBaseName = project.property("pluginName")
 repositories {
     mavenCentral()
     spigot()
-    maven { url = "https://repo.aikar.co/content/groups/aikar/" }
+    maven { url = 'https://repo.aikar.co/content/groups/aikar/' }
+    maven { url = 'https://repo.dmulloy2.net/repository/public/' }
     maven { url = 'https://jitpack.io' }
-    maven {
-        name = "sonatype-oss-snapshots"
-        url = "https://oss.sonatype.org/content/repositories/snapshots/"
-    }
+    maven { url = 'https://oss.sonatype.org/content/repositories/snapshots/' }
 }
 
 dependencies {
@@ -63,12 +61,16 @@ dependencies {
 
     //Add dependencies here
     implementation 'net.md-5:bungeecord-chat:1.16-R0.4'
+
     implementation "co.aikar:acf-paper:0.5.0-SNAPSHOT"
+
     implementation "com.github.MilkBowl:VaultAPI:1.7.1"
 
     implementation 'net.kyori:adventure-api:4.9.2'
     implementation 'net.kyori:adventure-text-minimessage:4.2.0-SNAPSHOT'
     implementation 'net.kyori:adventure-platform-bukkit:4.0.0'
+
+    implementation 'com.comphenix.protocol:ProtocolLib:4.7.0'
 
     //Test dependencies
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
@@ -97,7 +99,7 @@ test {
     testLogging {
         events "passed", "skipped", "failed"
     }
-    ignoreFailures = false
+    ignoreFailures = true
 }
 
 processResources {
