refactor: move player listener into own class

--- a/build.gradle
+++ b/build.gradle
@@ -99,7 +99,7 @@ test {
     testLogging {
         events "passed", "skipped", "failed"
     }
-    ignoreFailures = true
+    ignoreFailures = false
 }
 
 processResources {
