--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -50,5 +50,6 @@ javadoc {
     if(JavaVersion.current().isJava9Compatible()) {
         options.addBooleanOption('html5', true)
         options.addStringOption('Xdoclint:none', '-quiet')
+        options.encoding("UTF-8")
     }
 }
