--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,12 +1,28 @@
 channels:
+  # The id of the channel must be unique across your server network.
+  # Channels with the same id on different servers in the same network are considered the same.
+  # The id is used in commands and permissions.
   global:
+    # The display name of the channel visible in the channel tabs and messages.
+    # You can reference the name in the channel format via the <channel_name> tag.
+    # It is also accessible via the PlaceholderAPI under {schat.channel_name} tag.
     name: Global
+    # Set to 'true' to require a permission to join the channel.
+    # The permission is: 'schat.channel.<id>', e.g. 'schat.channel.global'
+    # default: false
     protected: false
-    format:
-      prefix: '§6[§aG§6]§r'
-      # alternate formatting
-      # prefix: <gold>[<green>G<gold>]<reset>
-      chat_color: GREEN
+    # The formatting of the chat messages in this channel.
+    # You can use the mini message format documented here: https://docs.adventure.kyori.net/minimessage#format
+    # You can use the web viewer to preview how your chat will look: https://webui.adventure.kyori.net/
+    # You can use any PlaceholderAPI placeholders with the {placeholder} syntax.
+    # The following custom mini message placeholders are available:
+    # - <channel_name>: The name of the channel (see above).
+    # - <sender_vault_prefix>: The vault prefix of the sending player (requires Vault).
+    # - <sender_displayname>: The name or nick of the sending player.
+    # - <sender_vault_suffix>: The vault suffix of the sending placer (requires Vault).
+    # - <message>: The message that is being sent.
+    # format: '<gold>[</gold><green><channel_name></green><gold>]</gold><reset> {sender_vault_prefix}{player_displayname}<chat_color>: <sender_vault_suffix><message>'
+    chat_color: GREEN
   trade:
     name: Trade
     format:
