--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,8 @@
+# You can fine tune the behaviour of the console chat in this section.
+console:
+  # This is the channel the console will send chat messages to.
+  default_channel: global
+# Define your list of channels here.
 channels:
   # The id of the channel must be unique across your server network.
   # Channels with the same id on different servers in the same network are considered the same.
@@ -6,11 +11,16 @@ channels:
     # The display name of the channel visible in the channel tabs and messages.
     # You can reference the name in the channel format via the <channel_name> tag.
     # It is also accessible via the PlaceholderAPI under {schat.channel_name} tag.
+    # default: <channel_id>
     name: Global
     # Set to 'true' to require a permission to join the channel.
     # The permission is: 'schat.channel.<id>', e.g. 'schat.channel.global'
     # default: false
     protected: false
+    # Sends all chat messages in this channel to the console as well.
+    # Set false to not send messages in this channel to the console.
+    # default: true
+    console: true
     # The formatting of the chat messages in this channel.
     # You can use the mini message format documented here: https://docs.adventure.kyori.net/minimessage#format
     # You can use the web viewer to preview how your chat will look: https://webui.adventure.kyori.net/
@@ -19,6 +29,7 @@ channels:
     # - <channel_name>: The name of the channel (see above).
     # - <sender_name>: The name or nick of the sending player.
     # - <message>: The message that is being sent.
+    # default: '<gold>[</gold><green><channel_name></green><gold>]</gold><reset> <yellow><sender_name><gray>: <green><message>'
     format: '<gold>[</gold><green><channel_name></green><gold>]</gold><reset> <yellow><sender_name><gray>: <green><message>'
   trade:
     name: Trade
