--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -27,10 +27,12 @@ channels:
     # You can use any PlaceholderAPI placeholders with the {placeholder} syntax.
     # The following custom mini message placeholders are available:
     # - <channel_name>: The name of the channel (see above).
+    # - <sender_vault_prefix>: The Vault prefix of the sending player. Requires Vault to work. "Bleeding" color codes in prefix and suffix currently do not work.
     # - <sender_name>: The name or nick of the sending player.
+    # - <sender_vault_suffix>: The Vault suffix of the sending player. Requires Vault to work. "Bleeding" color codes in prefix and suffix currently do not work.
     # - <message>: The message that is being sent.
-    # default: '<gold>[</gold><green><channel_name></green><gold>]</gold><reset><yellow><sender_name><gray>: <green><message>'
-    format: '<gold>[</gold><green><channel_name></green><gold>]</gold><reset><yellow><sender_name><gray>: <green><message>'
+    # default: '<gold>[</gold><green><channel_name></green><gold>]</gold><reset><yellow><sender_vault_prefix><sender_name><sender_vault_suffix><gray>: <gray><message>'
+    format: '<gold>[</gold><green><channel_name></green><gold>]</gold><reset><yellow><sender_vault_prefix><sender_name><sender_vault_suffix><gray>: <gray><message>'
   trade:
     name: Trade
   team:
