added option to specify default values

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,9 @@
+defaults:
+  channel:
+    protect: false
+    auto_join: false
+    console: true
+    format: '<gold>[</gold><green><channel_name></green><gold>]</gold><reset><yellow><sender_vault_prefix><sender_name><sender_vault_suffix><gray>: <gray><message>'
 # You can fine tune the behaviour of the console chat in this section.
 console:
   # This is the channel the console will send chat messages to.
@@ -16,9 +22,11 @@ channels:
     # Set to 'true' to require a permission to join the channel.
     # The permission is: 'schat.channel.<id>', e.g. 'schat.channel.global'
     # default: false
-    protected: false
-    #
-    auto_join: false
+    protect: false
+    # Set to 'true' to automatically let every player that has the permission join this channel.
+    # This is useful for global channels that everyone should have.
+    # default: false
+    auto_join: true
     # Sends all chat messages in this channel to the console as well.
     # Set false to not send messages in this channel to the console.
     # default: true
@@ -40,4 +48,4 @@ channels:
   team:
     # Protecting a channel requires the "schat.channel.<id>" permission to join it.
     # For the team channel this would be "schat.channel.team".
-    protected: true
+    protect: true
