--- a/build.gradle
+++ b/build.gradle
@@ -98,6 +98,8 @@ dependencies {
 
     implementation 'net.kyori:adventure-text-minimessage:4.2.0-SNAPSHOT'
 
+    implementation 'org.bstats:bstats-bukkit:2.2.1'
+
     //Test dependencies
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testImplementation 'org.mockito:mockito-core:4.0.0'
@@ -111,10 +113,12 @@ shadowJar {
     dependencies {
         include(dependency('co.aikar::'))
         include(dependency('net.kyori::'))
+        include(dependency('org.bstats::'))
     }
     relocate 'co.aikar.commands', "${packageName}.acf"
     relocate 'co.aikar.locales', "${packageName}.locales"
-    relocate 'net.kyori.adventure.text.minimessage', "${pluginName}.text.minimessage"
+    relocate 'net.kyori.adventure.text.minimessage', "${packageName}.text.minimessage"
+    relocate 'org.bstats', "${packageName}.bstats"
 }
 
 tasks.build.dependsOn(shadowJar)
