refactor: move can... methods into chatter

--- a/src/main/resources/lang_en.yaml
+++ b/src/main/resources/lang_en.yaml
@@ -3,4 +3,5 @@ commands:
   access-to-channel-denied: "You don't have permission to access the '{channel}' channel."
   send-to-channel-denied: "You don't have permission to send messages to the '{channel}' channel."
   joined-channel: "&7You joined the channel: &6{channel}&7."
+  leave-channel: "&7You left the channel: &6{channel}&7."
   invalid-conversation: "The conversation you tried to join does not exist."
