--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
+//file:noinspection GroovyAssignabilityCheck
 
 buildscript {
     repositories {
@@ -63,6 +64,7 @@ spigot {
             children = [
                     'schat.player.channel': true,
                     'schat.player.channel.join': true,
+                    'schat.player.channel.leave': true,
                     'schat.player.channel.quickmessage': true,
                     'schat.player.directmessage': true
             ]
@@ -110,7 +112,7 @@ dependencies {
 }
 
 shadowJar {
-    classifier = ''
+    archiveClassifier.set("")
     dependencies {
         include(dependency('co.aikar::'))
         include(dependency('net.kyori::'))
