feat(cmd): add non-disruptive `/schat reload` command
Adds #10

--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,13 @@ spigot {
                     'schat.player.directmessage': true
             ]
         }
+        'schat.admin' {
+            description 'Contains all admin permissions for sChat.'
+            defaults 'op'
+            children = [
+                    'schat.admin.reload': true
+            ]
+        }
     }
 }
 
