--- a/src/main/resources/lang_en.yaml
+++ b/src/main/resources/lang_en.yaml
@@ -6,3 +6,4 @@ commands:
   leave-channel: "&7You left the channel: &6{channel}&7."
   invalid-conversation: "The conversation you tried to join does not exist."
   cannot-send-to-self: "You can't send messages to yourself."
+  plugin-reloaded: "sChat and all channel configs have been reloaded."
