--- a/build.gradle
+++ b/build.gradle
@@ -100,12 +100,14 @@ repositories {
 }
 
 dependencies {
-    implementation "io.papermc.paper:paper-api:${mcVersion}-R0.1-SNAPSHOT"
+    implementation spigot(mcVersion)
 
     implementation "co.aikar:acf-paper:0.5.0-SNAPSHOT"
     implementation "com.github.MilkBowl:VaultAPI:1.7.1"
     implementation 'com.comphenix.protocol:ProtocolLib:4.7.0'
 
+    implementation "net.kyori:adventure-api:4.9.3"
+    implementation "net.kyori:adventure-platform-bukkit:4.0.0"
     implementation 'net.kyori:adventure-text-minimessage:4.2.0-SNAPSHOT'
 
     implementation 'org.bstats:bstats-bukkit:2.2.1'
@@ -130,7 +132,7 @@ shadowJar {
     }
     relocate 'co.aikar.commands', "${packageName}.acf"
     relocate 'co.aikar.locales', "${packageName}.locales"
-    relocate 'net.kyori.adventure.text.minimessage', "${packageName}.text.minimessage"
+    relocate 'net.kyori', "${packageName}.text"
     relocate 'org.bstats', "${packageName}.bstats"
     relocate 'net.silthus.configmapper', "${packageName}.configmapper"
 }
