feat(config): add name config to console

--- a/src/main/resources/config.default.yml
+++ b/src/main/resources/config.default.yml
@@ -16,6 +16,8 @@ defaults:
     format: '<gold>[</gold><green><channel_name></green><gold>]</gold><reset><yellow><sender_vault_prefix><sender_name><sender_vault_suffix><gray>: <gray><message>'
 # You can fine tune the behaviour of the console chat in this section.
 console:
+  # Set the name players see when chatting from the console.
+  name: Console
   # This is the channel the console will send chat messages to.
   default_channel: global
 # Define your list of channels here.
@@ -67,6 +69,7 @@ channels:
     # The following custom mini message placeholders are available:
     # - <channel_name>: The name of the channel (see above).
     # - <sender_vault_prefix>: The Vault prefix of the sending player. Requires Vault to work. "Bleeding" color codes in prefix and suffix currently do not work.
+    # - <sender_world>: The world of the sending player.
     # - <sender_name>: The name or nick of the sending player.
     # - <sender_vault_suffix>: The Vault suffix of the sending player. Requires Vault to work. "Bleeding" color codes in prefix and suffix currently do not work.
     # - <message>: The message that is being sent.
