--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -71,6 +71,7 @@ channels:
     # You can use the mini message format documented here: https://docs.adventure.kyori.net/minimessage#format
     # You can use the web viewer to preview how your chat will look: https://webui.adventure.kyori.net/
     # You can use any PlaceholderAPI placeholders with the {placeholder} syntax.
+    # You can use any hex color inside the <...> brackets, e.g. <#ffffff> instead of <yellow> or <green></green> <#ffffff></#ffffff>
     # The following custom mini message placeholders are available:
     # - <channel_name>: The name of the channel (see above).
     # - <sender_vault_prefix>: The Vault prefix of the sending player. Requires Vault to work. "Bleeding" color codes in prefix and suffix currently do not work.
