--- a/build.gradle
+++ b/build.gradle
@@ -114,6 +114,8 @@ dependencies {
     implementation 'net.silthus.config-mapper:bukkit:1.6.1'
     implementation 'me.clip:placeholderapi:2.10.10'
 
+    implementation 'org.jetbrains:annotations:16.0.2'
+
     //Test dependencies
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testImplementation 'org.mockito:mockito-core:4.0.0'
