feat(nicknames): allow bypassing blocked nicknames with `schat.nickname.set.blocked`
#14

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,9 +6,9 @@ players:
   # Set a regular expression of allowed nicknames.
   # This defaults to the allowed Minecraft nicknames.
   nickname_pattern: "[a-zA-Z0-9_]{3,16}"
-  # Players without the schat.nickname.set.blocked cannot use these nicknames.
   # The names are matched case-insensitive. nOtcH will be blocked as well.
   # You can also use regular expressions to block nicknames. The expressions are matched case-insensitive as well.
+  # Players with the 'schat.nickname.set.blocked' bypass these restrictions.
   blocked_nicknames:
     - Notch
     - .*admin.*
