--- a/build.gradle
+++ b/build.gradle
@@ -109,6 +109,7 @@ dependencies {
     implementation "net.kyori:adventure-api:4.9.3"
     implementation "net.kyori:adventure-platform-bukkit:4.0.0"
     implementation 'net.kyori:adventure-text-minimessage:4.2.0-SNAPSHOT'
+    implementation 'net.kyori:adventure-text-serializer-plain:4.9.3'
 
     implementation 'org.bstats:bstats-bukkit:2.2.1'
     implementation 'net.silthus.config-mapper:bukkit:1.6.1'
