--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -64,19 +64,8 @@ channels:
     # default: true
     console: true
     # The formatting of the chat messages in this channel.
-    # You can use the mini message format documented here: https://docs.adventure.kyori.net/minimessage#format
-    # You can use the web viewer to preview how your chat will look: https://webui.adventure.kyori.net/
-    # You can use any PlaceholderAPI placeholders with the {placeholder} syntax.
-    # You can use any hex color inside the <...> brackets, e.g. <#ffffff> instead of <yellow> or <green></green> <#ffffff></#ffffff>
-    # The following custom mini message placeholders are available:
-    # - <channel_name>: The name of the channel (see above).
-    # - <sender_vault_prefix>: The Vault prefix of the sending player. Requires Vault to work. "Bleeding" color codes in prefix and suffix currently do not work.
-    # - <sender_world>: The world of the sending player.
-    # - <sender_name>: The name or nick of the sending player.
-    # - <sender_vault_suffix>: The Vault suffix of the sending player. Requires Vault to work. "Bleeding" color codes in prefix and suffix currently do not work.
-    # - <message>: The message that is being sent.
-    # default: '<gold>[</gold><green><channel_name></green><gold>]</gold><reset><yellow><sender_vault_prefix><sender_name><sender_vault_suffix><gray>: <gray><message>'
-    format: '<gold>[</gold><green><channel_name></green><gold>]</gold><reset><yellow><sender_vault_prefix><sender_name><sender_vault_suffix><gray>: <gray><message>'
+    # Use any of the defined format templates (see below) or create a custom format for the channel.
+    format: channel
     # Configures the line above the channel names.
     footer:
       enabled: true
@@ -89,9 +78,46 @@ channels:
     # Protecting a channel requires the "schat.channel.<id>" permission to join it.
     # For the team channel this would be "schat.channel.team".
     protect: true
+# Define globally available format templates here.
+# You can use them in channel or other configurations where a format can be configured.
+# The format is always applied to a message, and you have access to the sender, target and channel, if it exists.
+# You can use any formatting documented here, including hex colors, click events, hovers, and so on: https://docs.adventure.kyori.net/minimessage#format
+# You can use the web viewer to preview how your chat will look: https://webui.adventure.kyori.net/
+# You can use any PlaceholderAPI placeholders with the {placeholder} syntax.
+# You can use any hex color inside the <...> brackets, e.g. <#ffffff> instead of <yellow> or <green></green> <#ffffff></#ffffff>
+#
+# The following custom mini message placeholders are available:
+# - <channel_name>: The name of the channel (see above).
+# - <sender_vault_prefix>: The Vault prefix of the sending player. Requires Vault to work.
+# - <sender_world>: The world of the sending player.
+# - <sender_name>: The real name of the sending player. Ignores the nickname.
+# - <sender_display_name>: The nickname of the sending player.
+# - <sender_vault_suffix>: The Vault suffix of the sending player. Requires Vault to work.
+# - <message>: The message that is being sent.
+#
+# Go to https://docs.adventure.kyori.net/minimessage#format and read it if you want to customize this.
+formats:
+  default:
+    type: mini-message
+    format: "<yellow><sender_display_name><gray>: <message>"
+  channel:
+    type: mini-message
+    format: "<channel_formatted><yellow><sender><gray>: <message>"
+  none:
+    type: mini-message
+    format: "<message>"
+  channel_formatted:
+    # The 'type' defaults to mini-message if omitted
+    format: "<gold>[</gold><green><channel_name></green><gold>]</gold>"
+  sender:
+    format: "<sender_vault_prefix><click:run_command:/schat message send <sender_name>><hover:show_text:'<sender_hover>'><sender_display_name></hover></click><sender_vault_suffix>"
+  sender_hover:
+    format: |-
+      <gray>Name: <yellow><sender_name>
+      <gray><i>Click to send <yellow><sender_display_name></yellow> a message.
 # Define your personal defaults for the various configs in this section.
 # Not setting a value in the actual config section will use these defaults.
-# For example: the trade channel below will inherit all the configs from this defaults config.
+# For example: the trade channel below will inherit all the configs from this 'defaults' section.
 defaults:
   channel:
     protect: false
@@ -104,6 +130,6 @@ defaults:
       - world_nether
       - world_the_end
     range: 100
-    format: '<gold>[</gold><green><channel_name></green><gold>]</gold><reset><yellow><sender_vault_prefix><sender_name><sender_vault_suffix><gray>: <gray><message>'
+    format: channel
     footer:
       enabled: true
