--- a/src/main/resources/config.default.yml
+++ b/src/main/resources/config.default.yml
@@ -21,6 +21,8 @@ console:
 private_chats:
   # Set false to disable global private chatting and restrict it to the current server.
   global: true
+  # Set the format template that should be applied to private messages.
+  format: private_message
 # Define your list of channels here.
 channels:
   # The id of the channel must be unique across your server network.
@@ -88,29 +90,31 @@ channels:
 #
 # The following custom mini message placeholders are available:
 # - <channel_name>: The name of the channel (see above).
-# - <sender_vault_prefix>: The Vault prefix of the sending player. Requires Vault to work. "Bleeding" color codes in prefix and suffix currently do not work.
+# - <sender_vault_prefix>: The Vault prefix of the sending player. Requires Vault to work.
 # - <sender_world>: The world of the sending player.
-# - <sender_name>: The real name of the sending player. Ignores the nick name.
+# - <sender_name>: The real name of the sending player. Ignores the nickname.
 # - <sender_display_name>: The nickname of the sending player.
-# - <sender_vault_suffix>: The Vault suffix of the sending player. Requires Vault to work. "Bleeding" color codes in prefix and suffix currently do not work.
+# - <sender_vault_suffix>: The Vault suffix of the sending player. Requires Vault to work.
 # - <message>: The message that is being sent.
 #
 # Go to https://docs.adventure.kyori.net/minimessage#format and read it if you want to customize this.
 formats:
   default:
+    # The 'type' defaults to mini-message if omitted
     type: mini-message
     format: "<yellow><sender_display_name><gray>: <message>"
   channel:
-    type: mini-message
     format: "<channel_formatted><yellow><sender><gray>: <message>"
+  private_message:
+    format: "<yellow><sender_no_vault><gray>: <message>"
   none:
-    type: mini-message
     format: "<message>"
   channel_formatted:
-    # The 'type' defaults to mini-message if omitted
     format: "<gold>[</gold><green><channel_name></green><gold>]</gold>"
   sender:
-    format: "<sender_vault_prefix><click:run_command:/schat message send <sender_name>><hover:show_text:'<sender_hover>'><sender_display_name></hover></click><sender_vault_suffix>"
+    format: "<sender_vault_prefix><sender_no_vault><sender_vault_suffix>"
+  sender_no_vault:
+    format: "<click:run_command:/schat message send <sender_name>><hover:show_text:'<sender_hover>'><sender_display_name></hover></click>"
   sender_hover:
     format: |-
       <gray>Name: <yellow><sender_name>
