ci: fix test report path again

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -78,8 +78,7 @@ jobs:
         uses: actions/upload-artifact@v2
         if: always()
         with:
-          name: build reports
-          path: "**/build/reports"
+          files: "**/build/test-results/**/*.xml"
 
   release:
     needs: [build, test]
