--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ spigot {
     apiVersion = project.property("apiVersion")
     load = STARTUP
     depends = ['ProtocolLib']
-    softDepends = ['Vault', 'PlaceholderAPI']
+    softDepends = ['Vault', 'PlaceholderAPI', 'WorldGuard']
     permissions {
         'schat.player' {
             description 'Contains all basic player permissions for using sChat.'
@@ -103,25 +103,39 @@ repositories {
     maven { url = 'https://jitpack.io' }
     maven { url = 'https://oss.sonatype.org/content/repositories/snapshots/' }
     maven { url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
+    maven { url = 'https://maven.enginehub.org/repo/' }
 }
 
 dependencies {
     implementation spigot(mcVersion)
 
     implementation "co.aikar:acf-paper:0.5.0-SNAPSHOT"
-    implementation "com.github.MilkBowl:VaultAPI:1.7.1"
     implementation 'com.comphenix.protocol:ProtocolLib:4.7.0'
 
+    //
+    // Shaded Dependencies
+    //
+    // adventure-text: https://github.com/KyoriPowered/adventure
     implementation "net.kyori:adventure-api:4.9.3"
     implementation "net.kyori:adventure-platform-bukkit:4.0.0"
 //    implementation 'net.kyori:adventure-text-minimessage:4.2.0-SNAPSHOT'
     // TODO: replace branch with official snapshot once this PR is merged: https://github.com/KyoriPowered/adventure-text-minimessage/pull/187
     implementation 'com.github.KyoriPowered:adventure-text-minimessage:fix~recursively-resolve-string-placeholders-SNAPSHOT'
     implementation 'net.kyori:adventure-text-serializer-plain:4.9.3'
-
+    // bStats: https://bstats.org/plugin/bukkit/sChat/13304
     implementation 'org.bstats:bstats-bukkit:2.2.1'
+    // config-mapper: https://github.com/sVoxelDev/config-mapper
     implementation 'net.silthus.config-mapper:bukkit:1.6.1'
+
+    //
+    // Optional Plugin Integrations
+    //
+    // PlaceholderAPI: https://github.com/PlaceholderAPI/PlaceholderAPI
     implementation 'me.clip:placeholderapi:2.10.10'
+    // Vault: https://github.com/MilkBowl/VaultAPI
+    implementation "com.github.MilkBowl:VaultAPI:1.7.1"
+    // WorldGuard: https://github.com/EngineHub/WorldGuard
+    implementation 'com.sk89q.worldguard:worldguard-bukkit:7.0.6'
 
     implementation 'org.jetbrains:annotations:22.0.0'
 
