--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ subprojects {
     apply plugin: 'org.cadixdev.licenser'
     apply plugin: 'jacoco'
     apply plugin: 'java-library'
+    apply plugin: 'java-test-fixtures'
     apply plugin: 'idea'
 
     apply from: "$rootDir/gradle/jacoco.gradle"
@@ -94,7 +95,7 @@ subprojects {
     }
 
     dependencies {
-        api "net.kyori:adventure-api:4.2.0-SNAPSHOT"
+        api "net.kyori:adventure-api:4.10.0-SNAPSHOT"
 
         implementation 'net.kyori:adventure-text-minimessage:4.2.0-SNAPSHOT'
         implementation 'net.kyori:adventure-text-serializer-plain:4.9.3'
